Gradle 9 support